--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,18 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "functions": {
-    "dist/index.js": {
-      "runtime": "@vercel/node"
+    "api/index.js": {
+      "runtime": "@vercel/node@20"
     }
   },
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/dist/index.js"
+      "dest": "/dist/public/$1"
     }
   ]
 }
