Add rewrites for API routing

--- a/vercel.json
+++ b/vercel.json
@@ -17,5 +17,11 @@
       "src": "/(.*)",
       "dest": "/dist/public/$1"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.js"
+    }
   ]
 }
