--- a/vercel.json
+++ b/vercel.json
@@ -8,14 +8,14 @@
       "runtime": "nodejs18.x"
     }
   },
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/index.js"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
     },
     {
-      "source": "/(.*)",
-      "destination": "/dist/public/$1"
+      "src": "/(.*)",
+      "dest": "/dist/public/$1"
     }
   ]
 }
