--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "installCommand": "npm install",
   "functions": {
     "api/index.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "@vercel/node"
     }
   },
   "routes": [
