--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "installCommand": "npm install",
   "functions": {
     "api/index.js": {
-      "runtime": "@vercel/node"
+      "runtime": "@vercel/node@3.0.0"
     }
   },
   "routes": [
