--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "nodeVersion": "20.x",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
