--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,11 @@
       "runtime": "@vercel/node@3.0.0"
     }
   },
+  "build": {
+      "env": {
+        "NODE_VERSION": "22"
+      }
+    },
   "routes": [
     {
       "src": "/api/(.*)",
